# rust-csv

./: Cargo.toml
csv-core/: Cargo.toml
csv-core/src/: lib.rs  reader.rs  writer.rs
csv-index/: Cargo.toml
csv-index/src/: simple.rs
src/: byte_record.rs  debug.rs  deserializer.rs  error.rs  lib.rs  reader.rs  serializer.rs  string_record.rs  writer.rs
